# base

./: .dockerignore  .editorconfig  .gitignore  .mocharc.yml  Cargo.toml  README.md  diesel.toml  docker-compose-prod.yml  docker-compose.yml  elm.json  package.json  py-logging.yml  pyproject.toml  requirements.txt  snowpack.config.js
config/: nginx.conf
docker/: Dockerfile-nginx  Dockerfile-py  Dockerfile-rust  create_users.sql  py-back.sh  rust-back.sh
docker/dev/: rust-back.sh  snowpack-front.sh
docker/prod/: Dockerfile-nginx  Dockerfile-py  Dockerfile-rust  nginx.conf  py-back.sh
frontend/js/: index.js
js/: index.js
js-tests/: tests.js
public/: index.html
pyBack/: main.py  settings.py
pyBack/tests/: test_def.py
rust/: main.rs
rust-back/: main.rs
tests/: Tests.elm
