[package]
name = "base"
version = "0.1.0"
authors = ["arnaud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "rust-back/main.rs"
name = "app"

[dependencies]
actix-web = "3"
tracing = "0.1"
tracing-appender = "0.1.2"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
diesel-tracing = { version = "0.1.3", features = ["postgres"] }
